# picoapp

./: Cargo.toml  env.sh  notes.md  pyproject.toml  requirements.txt  requirements_dev.in
.github/workflows/: CI.yml  checks.yaml  deploy.yml
example/: example_2.py  example_freq.py
examples/: example_1.py  example_2.py  example_fft.py  example_filter.py  example_freq.py  example_matplotlib.py  example_matrix_plot.py
examples/audio/: electric_bass_amp.npz  electric_piano.npz  metal_click.npz
python/picoapp/: __init__.py  _core.py  _picoapp.pyi  _types_inputs.py  _types_outputs.py  _types_reactive.py  core.py  types.py
python/picoapp/matplotlib/: __init__.py
scripts/: regenerate_maturin_ci  venv_install
src/: conversion.rs  lib.rs  main_run_ui.rs  outputs.rs  py_module.rs  ui.rs  ui_audio.rs  ui_inputs.rs  ui_plots.rs
src/inputs/: mod.rs  radio.rs  sliders.rs
src/widgets/: color_utils.rs  mod.rs  ui_checkbox.rs  ui_image.rs  ui_outputs.rs  ui_plots.rs  ui_radio.rs  ui_reactive.rs  ui_slider.rs
