[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "picoapp"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
# Unfortunately maturin does not support dynamic dependencies yet:
# https://github.com/PyO3/maturin/issues/1537
dependencies = [
    "numpy",
]
# Eventually something like the following should work:
# dynamic = ["version", "dependencies"]
#
# [tool.maturin.dynamic]
# dependencies = { file = ["requirements.in"] }


[tool.maturin]
python-source = "python"
module-name = "picoapp._picoapp"
features = ["pyo3/extension-module"]
